#1022 - Samiksha/Aniket - view all UI alignment fixed in case of long search term.

--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -92,6 +92,7 @@
 .view-all-div
   text-align: center
   margin-top: 4%
+  margin-bottom: 2%
 
 #view-all
   text-decoration: none
